Bug 508919.  Stop leaking nsStyleBorder objects.  r=dbaron