layout/style/nsStyleStruct.cpp
@@ -116,6 +116,7 @@ nsStyleFont::nsStyleFont(const nsFont& aFont, nsPresContext *aPresContext)
   : mFont(aFont),
     mGenericID(kGenericFont_NONE)
 {
+  MOZ_COUNT_CTOR(nsStyleFont);
   mSize = mFont.size = nsStyleFont::ZoomText(aPresContext, mFont.size);
 #ifdef MOZ_MATHML
   mScriptUnconstrainedSize = mSize;
@@ -137,12 +138,14 @@ nsStyleFont::nsStyleFont(const nsStyleFont& aSrc)
   , mScriptSizeMultiplier(aSrc.mScriptSizeMultiplier)
 #endif
 {
+  MOZ_COUNT_CTOR(nsStyleFont);
 }
 
 nsStyleFont::nsStyleFont(nsPresContext* aPresContext)
   : mFont(*(aPresContext->GetDefaultFont(kPresContext_DefaultVariableFont_ID))),
     mGenericID(kGenericFont_NONE)
 {
+  MOZ_COUNT_CTOR(nsStyleFont);
   mSize = mFont.size = nsStyleFont::ZoomText(aPresContext, mFont.size);
 #ifdef MOZ_MATHML
   mScriptUnconstrainedSize = mSize;
@@ -245,6 +248,7 @@ static nscoord CalcCoord(const nsStyleCoord& aCoord,
 }
 
 nsStyleMargin::nsStyleMargin() {
+  MOZ_COUNT_CTOR(nsStyleMargin);
   nsStyleCoord zero(0);
   NS_FOR_CSS_SIDES(side) {
     mMargin.Set(side, zero);
@@ -253,6 +257,7 @@ nsStyleMargin::nsStyleMargin() {
 }
 
 nsStyleMargin::nsStyleMargin(const nsStyleMargin& aSrc) {
+  MOZ_COUNT_CTOR(nsStyleMargin);
   mMargin = aSrc.mMargin;
   mHasCachedMargin = PR_FALSE;
 }
@@ -307,6 +312,7 @@ nsChangeHint nsStyleMargin::MaxDifference()
 #endif
 
 nsStylePadding::nsStylePadding() {
+  MOZ_COUNT_CTOR(nsStylePadding);
   nsStyleCoord zero(0);
   NS_FOR_CSS_SIDES(side) {
     mPadding.Set(side, zero);
@@ -315,6 +321,7 @@ nsStylePadding::nsStylePadding() {
 }
 
 nsStylePadding::nsStylePadding(const nsStylePadding& aSrc) {
+  MOZ_COUNT_CTOR(nsStylePadding);
   mPadding = aSrc.mPadding;
   mHasCachedPadding = PR_FALSE;
 }
@@ -372,6 +379,7 @@ nsStyleBorder::nsStyleBorder(nsPresContext* aPresContext)
     mComputedBorder(0, 0, 0, 0),
     mBorderImage(nsnull)
 {
+  MOZ_COUNT_CTOR(nsStyleBorder);
   nscoord medium =
     (aPresContext->GetBorderWidthTable())[NS_STYLE_BORDER_WIDTH_MEDIUM];
   NS_FOR_CSS_SIDES(side) {
@@ -422,6 +430,7 @@ nsStyleBorder::nsStyleBorder(const nsStyleBorder& aSrc)
     mBorderImage(aSrc.mBorderImage),
     mTwipsPerPixel(aSrc.mTwipsPerPixel)
 {
+  MOZ_COUNT_CTOR(nsStyleBorder);
   if (aSrc.mBorderColors) {
     EnsureBorderColors();
     for (PRInt32 i = 0; i < 4; i++)
@@ -442,6 +451,7 @@ nsStyleBorder::nsStyleBorder(const nsStyleBorder& aSrc)
 
 nsStyleBorder::~nsStyleBorder()
 {
+  MOZ_COUNT_DTOR(nsStyleBorder);
   if (mBorderColors) {
     for (PRInt32 i = 0; i < 4; i++)
       delete mBorderColors[i];
@@ -546,6 +556,7 @@ nsStyleBorder::GetActualBorder() const
 
 nsStyleOutline::nsStyleOutline(nsPresContext* aPresContext)
 {
+  MOZ_COUNT_CTOR(nsStyleOutline);
   // spacing values not inherited
   nsStyleCoord zero(0);
   NS_FOR_CSS_HALF_CORNERS(corner) {
@@ -563,6 +574,7 @@ nsStyleOutline::nsStyleOutline(nsPresContext* aPresContext)
 }
 
 nsStyleOutline::nsStyleOutline(const nsStyleOutline& aSrc) {
+  MOZ_COUNT_CTOR(nsStyleOutline);
   memcpy((nsStyleOutline*)this, &aSrc, sizeof(nsStyleOutline));
 }
 
@@ -618,10 +630,12 @@ nsStyleList::nsStyleList()
   : mListStyleType(NS_STYLE_LIST_STYLE_DISC),
     mListStylePosition(NS_STYLE_LIST_STYLE_POSITION_OUTSIDE)
 {
+  MOZ_COUNT_CTOR(nsStyleList);
 }
 
 nsStyleList::~nsStyleList() 
 {
+  MOZ_COUNT_DTOR(nsStyleList);
 }
 
 nsStyleList::nsStyleList(const nsStyleList& aSource)
@@ -630,6 +644,7 @@ nsStyleList::nsStyleList(const nsStyleList& aSource)
     mListStyleImage(aSource.mListStyleImage),
     mImageRegion(aSource.mImageRegion)
 {
+  MOZ_COUNT_CTOR(nsStyleList);
 }
 
 nsChangeHint nsStyleList::CalcDifference(const nsStyleList& aOther) const
@@ -660,6 +675,7 @@ nsChangeHint nsStyleList::MaxDifference()
 //
 nsStyleXUL::nsStyleXUL() 
 { 
+  MOZ_COUNT_CTOR(nsStyleXUL);
   mBoxAlign  = NS_STYLE_BOX_ALIGN_STRETCH;
   mBoxDirection = NS_STYLE_BOX_DIRECTION_NORMAL;
   mBoxFlex = 0.0f;
@@ -671,10 +687,12 @@ nsStyleXUL::nsStyleXUL()
 
 nsStyleXUL::~nsStyleXUL() 
 {
+  MOZ_COUNT_DTOR(nsStyleXUL);
 }
 
 nsStyleXUL::nsStyleXUL(const nsStyleXUL& aSource)
 {
+  MOZ_COUNT_CTOR(nsStyleXUL);
   memcpy((nsStyleXUL*)this, &aSource, sizeof(nsStyleXUL));
 }
 
@@ -705,6 +723,7 @@ nsChangeHint nsStyleXUL::MaxDifference()
 //
 nsStyleColumn::nsStyleColumn(nsPresContext* aPresContext)
 {
+  MOZ_COUNT_CTOR(nsStyleColumn);
   mColumnCount = NS_STYLE_COLUMN_COUNT_AUTO;
   mColumnWidth.SetAutoValue();
   mColumnGap.SetNormalValue();
@@ -719,10 +738,12 @@ nsStyleColumn::nsStyleColumn(nsPresContext* aPresContext)
 
 nsStyleColumn::~nsStyleColumn() 
 {
+  MOZ_COUNT_DTOR(nsStyleColumn);
 }
 
 nsStyleColumn::nsStyleColumn(const nsStyleColumn& aSource)
 {
+  MOZ_COUNT_CTOR(nsStyleColumn);
   memcpy((nsStyleColumn*)this, &aSource, sizeof(nsStyleColumn));
 }
 
@@ -763,6 +784,7 @@ nsChangeHint nsStyleColumn::MaxDifference()
 //
 nsStyleSVG::nsStyleSVG() 
 {
+    MOZ_COUNT_CTOR(nsStyleSVG);
     mFill.mType              = eStyleSVGPaintType_Color;
     mFill.mPaint.mColor      = NS_RGB(0,0,0);
     mFill.mFallbackColor     = NS_RGB(0,0,0);
@@ -794,13 +816,13 @@ nsStyleSVG::nsStyleSVG()
 
 nsStyleSVG::~nsStyleSVG() 
 {
+  MOZ_COUNT_DTOR(nsStyleSVG);
   delete [] mStrokeDasharray;
 }
 
 nsStyleSVG::nsStyleSVG(const nsStyleSVG& aSource)
 {
-  //memcpy((nsStyleSVG*)this, &aSource, sizeof(nsStyleSVG));
-
+  MOZ_COUNT_CTOR(nsStyleSVG);
   mFill = aSource.mFill;
   mStroke = aSource.mStroke;
 
@@ -927,6 +949,7 @@ nsChangeHint nsStyleSVG::MaxDifference()
 //
 nsStyleSVGReset::nsStyleSVGReset() 
 {
+    MOZ_COUNT_CTOR(nsStyleSVGReset);
     mStopColor               = NS_RGB(0,0,0);
     mFloodColor              = NS_RGB(0,0,0);
     mLightingColor           = NS_RGB(255,255,255);
@@ -940,10 +963,12 @@ nsStyleSVGReset::nsStyleSVGReset()
 
 nsStyleSVGReset::~nsStyleSVGReset() 
 {
+  MOZ_COUNT_DTOR(nsStyleSVGReset);
 }
 
 nsStyleSVGReset::nsStyleSVGReset(const nsStyleSVGReset& aSource)
 {
+  MOZ_COUNT_CTOR(nsStyleSVGReset);
   mStopColor = aSource.mStopColor;
   mFloodColor = aSource.mFloodColor;
   mLightingColor = aSource.mLightingColor;
@@ -1041,6 +1066,7 @@ PRBool nsStyleSVGPaint::operator==(const nsStyleSVGPaint& aOther) const
 //
 nsStylePosition::nsStylePosition(void) 
 { 
+  MOZ_COUNT_CTOR(nsStylePosition);
   // positioning values not inherited
   nsStyleCoord  autoCoord(eStyleUnit_Auto);
   mOffset.SetLeft(autoCoord);
@@ -1059,10 +1085,12 @@ nsStylePosition::nsStylePosition(void)
 
 nsStylePosition::~nsStylePosition(void) 
 { 
+  MOZ_COUNT_DTOR(nsStylePosition);
 }
 
 nsStylePosition::nsStylePosition(const nsStylePosition& aSource)
 {
+  MOZ_COUNT_CTOR(nsStylePosition);
   memcpy((nsStylePosition*)this, &aSource, sizeof(nsStylePosition));
 }
 
@@ -1113,6 +1141,7 @@ nsChangeHint nsStylePosition::MaxDifference()
 
 nsStyleTable::nsStyleTable() 
 { 
+  MOZ_COUNT_CTOR(nsStyleTable);
   // values not inherited
   mLayoutStrategy = NS_STYLE_TABLE_LAYOUT_AUTO;
   mCols  = NS_STYLE_TABLE_COLS_NONE;
@@ -1122,11 +1151,13 @@ nsStyleTable::nsStyleTable()
 }
 
 nsStyleTable::~nsStyleTable(void) 
-{ 
+{
+  MOZ_COUNT_DTOR(nsStyleTable);
 }
 
 nsStyleTable::nsStyleTable(const nsStyleTable& aSource)
 {
+  MOZ_COUNT_CTOR(nsStyleTable);
   memcpy((nsStyleTable*)this, &aSource, sizeof(nsStyleTable));
 }
 
@@ -1154,6 +1185,7 @@ nsChangeHint nsStyleTable::MaxDifference()
 
 nsStyleTableBorder::nsStyleTableBorder(nsPresContext* aPresContext) 
 { 
+  MOZ_COUNT_CTOR(nsStyleTableBorder);
   mBorderCollapse = NS_STYLE_BORDER_SEPARATE;
 
   nsCompatibility compatMode = eCompatibility_FullStandards;
@@ -1168,11 +1200,13 @@ nsStyleTableBorder::nsStyleTableBorder(nsPresContext* aPresContext)
 }
 
 nsStyleTableBorder::~nsStyleTableBorder(void) 
-{ 
+{
+  MOZ_COUNT_DTOR(nsStyleTableBorder);
 }
 
 nsStyleTableBorder::nsStyleTableBorder(const nsStyleTableBorder& aSource)
 {
+  MOZ_COUNT_CTOR(nsStyleTableBorder);
   memcpy((nsStyleTableBorder*)this, &aSource, sizeof(nsStyleTableBorder));
 }
 
@@ -1211,11 +1245,13 @@ nsChangeHint nsStyleTableBorder::MaxDifference()
 
 nsStyleColor::nsStyleColor(nsPresContext* aPresContext)
 {
+  MOZ_COUNT_CTOR(nsStyleColor);
   mColor = aPresContext->DefaultColor();
 }
 
 nsStyleColor::nsStyleColor(const nsStyleColor& aSource)
 {
+  MOZ_COUNT_CTOR(nsStyleColor);
   mColor = aSource.mColor;
 }
 
@@ -1294,6 +1330,7 @@ nsStyleBackground::nsStyleBackground()
   , mBackgroundColor(NS_RGBA(0, 0, 0, 0))
   , mBackgroundInlinePolicy(NS_STYLE_BG_INLINE_POLICY_CONTINUOUS)
 {
+  MOZ_COUNT_CTOR(nsStyleBackground);
   Layer *onlyLayer = mLayers.AppendElement();
   NS_ASSERTION(onlyLayer, "auto array must have room for 1 element");
   onlyLayer->SetInitialValues();
@@ -1311,6 +1348,7 @@ nsStyleBackground::nsStyleBackground(const nsStyleBackground& aSource)
   , mBackgroundColor(aSource.mBackgroundColor)
   , mBackgroundInlinePolicy(aSource.mBackgroundInlinePolicy)
 {
+  MOZ_COUNT_CTOR(nsStyleBackground);
   // If the deep copy of mLayers failed, truncate the counts.
   PRUint32 count = mLayers.Length();
   if (count != aSource.mLayers.Length()) {
@@ -1327,6 +1365,7 @@ nsStyleBackground::nsStyleBackground(const nsStyleBackground& aSource)
 
 nsStyleBackground::~nsStyleBackground()
 {
+  MOZ_COUNT_DTOR(nsStyleBackground);
 }
 
 nsChangeHint nsStyleBackground::CalcDifference(const nsStyleBackground& aOther) const
@@ -1550,6 +1589,7 @@ PRBool nsStyleBackground::Image::operator==(const Image& aOther) const
 
 nsStyleDisplay::nsStyleDisplay()
 {
+  MOZ_COUNT_CTOR(nsStyleDisplay);
   mAppearance = NS_THEME_NONE;
   mDisplay = NS_STYLE_DISPLAY_INLINE;
   mOriginalDisplay = NS_STYLE_DISPLAY_NONE;
@@ -1570,6 +1610,7 @@ nsStyleDisplay::nsStyleDisplay()
 
 nsStyleDisplay::nsStyleDisplay(const nsStyleDisplay& aSource)
 {
+  MOZ_COUNT_CTOR(nsStyleDisplay);
   mAppearance = aSource.mAppearance;
   mDisplay = aSource.mDisplay;
   mOriginalDisplay = aSource.mOriginalDisplay;
@@ -1674,6 +1715,7 @@ nsChangeHint nsStyleDisplay::MaxDifference()
 
 nsStyleVisibility::nsStyleVisibility(nsPresContext* aPresContext)
 {
+  MOZ_COUNT_CTOR(nsStyleVisibility);
   PRUint32 bidiOptions = aPresContext->GetBidi();
   if (GET_BIDI_OPTION_DIRECTION(bidiOptions) == IBMBIDI_TEXTDIRECTION_RTL)
     mDirection = NS_STYLE_DIRECTION_RTL;
@@ -1686,6 +1728,7 @@ nsStyleVisibility::nsStyleVisibility(nsPresContext* aPresContext)
 
 nsStyleVisibility::nsStyleVisibility(const nsStyleVisibility& aSource)
 {
+  MOZ_COUNT_CTOR(nsStyleVisibility);
   mDirection = aSource.mDirection;
   mVisible = aSource.mVisible;
   mLangGroup = aSource.mLangGroup;
@@ -1785,11 +1828,13 @@ nsStyleContent::nsStyleContent(void)
     mIncrementCount(0),
     mResetCount(0)
 {
+  MOZ_COUNT_CTOR(nsStyleContent);
   mMarkerOffset.SetAutoValue();
 }
 
 nsStyleContent::~nsStyleContent(void)
 {
+  MOZ_COUNT_DTOR(nsStyleContent);
   DELETE_ARRAY_IF(mContents);
   DELETE_ARRAY_IF(mIncrements);
   DELETE_ARRAY_IF(mResets);
@@ -1805,6 +1850,7 @@ nsStyleContent::nsStyleContent(const nsStyleContent& aSource)
     mResetCount(0)
 
 {
+  MOZ_COUNT_CTOR(nsStyleContent);
   mMarkerOffset = aSource.mMarkerOffset;
 
   PRUint32 index;
@@ -1903,11 +1949,13 @@ nsStyleQuotes::nsStyleQuotes(void)
   : mQuotesCount(0),
     mQuotes(nsnull)
 {
+  MOZ_COUNT_CTOR(nsStyleQuotes);
   SetInitial();
 }
 
 nsStyleQuotes::~nsStyleQuotes(void)
 {
+  MOZ_COUNT_DTOR(nsStyleQuotes);
   DELETE_ARRAY_IF(mQuotes);
 }
 
@@ -1915,6 +1963,7 @@ nsStyleQuotes::nsStyleQuotes(const nsStyleQuotes& aSource)
   : mQuotesCount(0),
     mQuotes(nsnull)
 {
+  MOZ_COUNT_CTOR(nsStyleQuotes);
   CopyFrom(aSource);
 }
 
@@ -1980,6 +2029,7 @@ nsChangeHint nsStyleQuotes::MaxDifference()
 
 nsStyleTextReset::nsStyleTextReset(void) 
 { 
+  MOZ_COUNT_CTOR(nsStyleTextReset);
   mVerticalAlign.SetIntValue(NS_STYLE_VERTICAL_ALIGN_BASELINE, eStyleUnit_Enumerated);
   mTextDecoration = NS_STYLE_TEXT_DECORATION_NONE;
   mUnicodeBidi = NS_STYLE_UNICODE_BIDI_NORMAL;
@@ -1987,10 +2037,14 @@ nsStyleTextReset::nsStyleTextReset(void)
 
 nsStyleTextReset::nsStyleTextReset(const nsStyleTextReset& aSource) 
 { 
+  MOZ_COUNT_CTOR(nsStyleTextReset);
   memcpy((nsStyleTextReset*)this, &aSource, sizeof(nsStyleTextReset));
 }
 
-nsStyleTextReset::~nsStyleTextReset(void) { }
+nsStyleTextReset::~nsStyleTextReset(void)
+{
+  MOZ_COUNT_DTOR(nsStyleTextReset);
+}
 
 nsChangeHint nsStyleTextReset::CalcDifference(const nsStyleTextReset& aOther) const
 {
@@ -2064,6 +2118,7 @@ CalcShadowDifference(nsCSSShadowArray* lhs,
 
 nsStyleText::nsStyleText(void)
 { 
+  MOZ_COUNT_CTOR(nsStyleText);
   mTextAlign = NS_STYLE_TEXT_ALIGN_DEFAULT;
   mTextTransform = NS_STYLE_TEXT_TRANSFORM_NONE;
   mWhiteSpace = NS_STYLE_WHITESPACE_NORMAL;
@@ -2087,9 +2142,14 @@ nsStyleText::nsStyleText(const nsStyleText& aSource)
     mTextIndent(aSource.mTextIndent),
     mWordSpacing(aSource.mWordSpacing),
     mTextShadow(aSource.mTextShadow)
-{ }
+{
+  MOZ_COUNT_CTOR(nsStyleText);
+}
 
-nsStyleText::~nsStyleText(void) { }
+nsStyleText::~nsStyleText(void)
+{
+  MOZ_COUNT_DTOR(nsStyleText);
+}
 
 nsChangeHint nsStyleText::CalcDifference(const nsStyleText& aOther) const
 {
@@ -2132,6 +2192,7 @@ nsCursorImage::nsCursorImage()
 
 nsStyleUserInterface::nsStyleUserInterface(void) 
 { 
+  MOZ_COUNT_CTOR(nsStyleUserInterface);
   mUserInput = NS_STYLE_USER_INPUT_AUTO;
   mUserModify = NS_STYLE_USER_MODIFY_READ_ONLY;
   mUserFocus = NS_STYLE_USER_FOCUS_NONE;
@@ -2148,11 +2209,13 @@ nsStyleUserInterface::nsStyleUserInterface(const nsStyleUserInterface& aSource) 
   mUserFocus(aSource.mUserFocus),
   mCursor(aSource.mCursor)
 { 
+  MOZ_COUNT_CTOR(nsStyleUserInterface);
   CopyCursorArrayFrom(aSource);
 }
 
 nsStyleUserInterface::~nsStyleUserInterface(void) 
 { 
+  MOZ_COUNT_DTOR(nsStyleUserInterface);
   delete [] mCursorArray;
 }
 
@@ -2210,6 +2273,7 @@ nsStyleUserInterface::CopyCursorArrayFrom(const nsStyleUserInterface& aSource)
 
 nsStyleUIReset::nsStyleUIReset(void) 
 { 
+  MOZ_COUNT_CTOR(nsStyleUIReset);
   mUserSelect = NS_STYLE_USER_SELECT_AUTO;
   mForceBrokenImageIcon = 0;
   mIMEMode = NS_STYLE_IME_MODE_AUTO;
@@ -2218,6 +2282,7 @@ nsStyleUIReset::nsStyleUIReset(void)
 
 nsStyleUIReset::nsStyleUIReset(const nsStyleUIReset& aSource) 
 {
+  MOZ_COUNT_CTOR(nsStyleUIReset);
   mUserSelect = aSource.mUserSelect;
   mForceBrokenImageIcon = aSource.mForceBrokenImageIcon;
   mIMEMode = aSource.mIMEMode;
@@ -2226,6 +2291,7 @@ nsStyleUIReset::nsStyleUIReset(const nsStyleUIReset& aSource)
 
 nsStyleUIReset::~nsStyleUIReset(void) 
 { 
+  MOZ_COUNT_DTOR(nsStyleUIReset);
 }
 
 nsChangeHint nsStyleUIReset::CalcDifference(const nsStyleUIReset& aOther) const
